--- a/app/src/main/res/values-sr-rSP/strings.xml
+++ b/app/src/main/res/values-sr-rSP/strings.xml
@@ -147,6 +147,11 @@
     <string name="old_navbar_summary">Прикажи стари кориснички интерфејс траке за навигацију (са вертикалним панелом за веће екране)</string>
     <string name="hide_timeline_for_albums">Сакриј временску линију за албуме</string>
     <string name="hide_timeline_for_album_summary">Сакрива заглавља датума када отварате албум</string>
+    <string name="allow_vibrations">Allow vibrations</string>
+    <string name="allow_vibrations_summary">Allow sending feedback as vibrations while performing some actions or gestures</string>
+    <string name="album_name">Album Name</string>
+    <string name="create_new_album">Create new album</string>
+    <string name="copy">Copy</string>
     <plurals name="item_count">
         <item quantity="one">%s предмет</item>
         <item quantity="few">%s предмета</item>
