New Crowdin updates (#260)
* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (German)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Russian)

* New translations strings.xml (Serbian (Cyrillic))

* New translations strings.xml (Swedish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (English)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Galician)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Odia)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Japanese)

* New translations strings.xml (German)

* New translations strings.xml (German)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Arabic)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)



--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -18,13 +18,13 @@
     <string name="favorites">Избранное</string>
     <string name="no_media_title">Похоже, здесь пусто</string>
     <string name="no_media_cd">Медиафайлы отсутствуют</string>
-    <string name="empty_trash_title">Чисто, как в аптеке</string>
+    <string name="empty_trash_title">Кристально чисто</string>
     <string name="empty_trash_cd">Корзина пуста</string>
     <string name="error_title">Что-то пошло не так :(</string>
     <string name="error_cd">Произошла ошибка</string>
     <string name="copy_error">Скопировать ошибку</string>
     <string name="trash_restore">Восстановить</string>
-    <string name="trash_empty">Пусто</string>
+    <string name="trash_empty">Очистить</string>
     <string name="trash_delete">Удалить</string>
     <string name="share">Поделиться</string>
     <string name="remove_selected">Удалить выбранное</string>
@@ -132,7 +132,7 @@
     <string name="required">Необходимое</string>
     <string name="optional">Необязательное</string>
     <string name="permission_manage_media_title">- Управление медиа</string>
-    <string name="permission_manage_media_summary">"    • Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
+    <string name="permission_manage_media_summary">"    • Автоматически выдает системные диалоги подтверждения, когда вы запрашиваете несколько изменений в медиафайлах (переключение избранного, управление корзиной, редактирование метаданных и т. д.)"</string>
     <string name="read_media_images">Чтение изображений</string>
     <string name="read_media_images_summary">Позволяет приложению отображать ваши изображения</string>
     <string name="read_media_videos">Чтение видео</string>
@@ -145,13 +145,21 @@
     <string name="fancy_blur_summary">Размытие фона в режиме просмотра мультимедиа</string>
     <string name="old_navbar">Использовать Material Navigation</string>
     <string name="old_navbar_summary">Показывать старый пользовательский интерфейс панели навигации (вертикальная панель для больших экранов)</string>
-    <string name="hide_timeline_for_albums">Hide timeline for albums</string>
-    <string name="hide_timeline_for_album_summary">Hides date headers when opening an album</string>
-    <string name="allow_vibrations">Allow vibrations</string>
-    <string name="allow_vibrations_summary">Allow sending feedback as vibrations while performing some actions or gestures</string>
-    <string name="album_name">Album Name</string>
-    <string name="create_new_album">Create new album</string>
-    <string name="copy">Copy</string>
+    <string name="hide_timeline_for_albums">Скрыть временную шкалу для альбомов</string>
+    <string name="hide_timeline_for_album_summary">Скрывает заголовки дат при открытии альбома</string>
+    <string name="allow_vibrations">Разрешить вибрации</string>
+    <string name="allow_vibrations_summary">Позволяет отправлять обратную связь в виде вибрации при выполнении некоторых действий или жестов</string>
+    <string name="album_name">Название альбома</string>
+    <string name="create_new_album">Создать новый альбом</string>
+    <string name="copy">Копировать</string>
+    <string name="ignored_albums">Игнорируемые альбомы</string>
+    <string name="select_an_album">Выберите альбом</string>
+    <string name="blacklist_summary">Игнорировать альбомы из галереи</string>
+    <string name="add_to_ignored">Добавить в игнорируемые альбомы</string>
+    <string name="add_to_ignored_summary">Убрать альбом из отображения в Галерее</string>
+    <string name="remove_from_ignored">Удалить из списка игнорируемых</string>
+    <string name="remove_from_ignored_summary">Удалите из списка игнорируемых альбом с названием %1$s</string>
+    <string name="favorite">Favorite</string>
     <plurals name="item_count">
         <item quantity="one">%s пункт</item>
         <item quantity="few">%s пунктов</item>
