--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">Galerie</string>
     <string name="nav_albums">Alba</string>
-    <string name="searchbar_title"><![CDATA[Hledat fotky a videa]]></string>
+    <string name="searchbar_title"><![CDATA[Hledat fotky & videa]]></string>
     <string name="header_today">Dnes</string>
     <string name="header_yesterday">Včera</string>
     <string name="request_permissions">Požádat o oprávnění</string>
@@ -22,7 +22,7 @@
     <string name="empty_trash_cd">Koš je prázdný</string>
     <string name="error_title">Něco se pokazilo :(</string>
     <string name="error_cd">Došlo k chybě</string>
-    <string name="copy_error">Chyba kopírování</string>
+    <string name="copy_error">Zkopírovat chybu</string>
     <string name="trash_restore">Obnovit</string>
     <string name="trash_empty">Prázdné</string>
     <string name="trash_delete">Odstranit</string>
@@ -51,7 +51,7 @@
     <string name="pin">Připnout</string>
     <string name="nav_timeline">Časová osa</string>
     <string name="location_cd">Umístění médií</string>
-    <string name="location_map_cd">Mapa umístění</string>
+    <string name="location_map_cd">Mapa polohy</string>
     <string name="app_dev">od %s</string>
     <string name="app_dev_name">IacobIonut01</string>
     <string name="donate">Přispět</string>
@@ -102,56 +102,64 @@
     <string name="set_wallpaper_error">Nelze nastavit jako pozadí, není k dispozici žádná aplikace!</string>
     <string name="monthly_timeline_title">Měsíční časová osa</string>
     <string name="monthly_timeline_summary">Seskupit časovou osu měsíčně místo podle data (restartuje aplikaci)</string>
-    <string name="amoled_mode_title">Use Amoled Mode</string>
+    <string name="amoled_mode_title">Použít Amoled režim</string>
     <string name="amoled_mode_summary">Higher contrast, best suited for Amoled Screens</string>
-    <string name="location_chip">Location: %s</string>
-    <string name="media_details">Details</string>
-    <string name="album_card_size">Album Card Size</string>
-    <string name="edit_metadata">Edit Metadata</string>
-    <string name="dialog_to_trash">Moving to Trash</string>
+    <string name="location_chip">Poloha: %s</string>
+    <string name="media_details">Podrobnosti</string>
+    <string name="album_card_size">Velikost karty alba</string>
+    <string name="edit_metadata">Upravit Metadata</string>
+    <string name="dialog_to_trash">Přesouvání do koše</string>
     <string name="dialog_delete">Deleting Permanently</string>
     <string name="s_items">%1$s items</string>
     <string name="trashing_items">Trashing %1$s items..</string>
     <string name="deleting_items">Deleting %1$s items...</string>
     <string name="long_press_to_remove">Long press to remove</string>
-    <string name="dialog_from_trash">Restoring from Trash</string>
-    <string name="restoring_items">Restoring %1$s items..</string>
-    <string name="trash_incompatible_title">Some items cannot be trashed!</string>
+    <string name="dialog_from_trash">Obnovování z koše</string>
+    <string name="restoring_items">Obnovování %1$s položek..</string>
+    <string name="trash_incompatible_title">Některé položky nelze vyhodit!</string>
     <string name="trash_incompatible_summary">Such items will be deleted permanently instead.</string>
-    <string name="error_toast">An error occurred!</string>
+    <string name="error_toast">Došlo k chybě!</string>
     <string name="beta">Beta</string>
-    <string name="remove_metadata">Remove Metadata</string>
-    <string name="remove_location">Remove Location</string>
-    <string name="description">Description</string>
-    <string name="move_to_another_album">Move to another album</string>
-    <string name="move">Move</string>
-    <string name="some_permissions_are_not_granted">Some permissions are not granted!</string>
+    <string name="remove_metadata">Odstranit metadata</string>
+    <string name="remove_location">Odstranit polohu</string>
+    <string name="description">Popis</string>
+    <string name="move_to_another_album">Přesunout do jiného albumu</string>
+    <string name="move">Přesunout</string>
+    <string name="some_permissions_are_not_granted">Některá oprávnění nejsou udělena!</string>
     <string name="get_started">Get Started</string>
-    <string name="welcome">Welcome</string>
+    <string name="welcome">Vítejte</string>
     <string name="setup_summary">In order to access your media, it is required to grant the following permissions:</string>
-    <string name="required">Required</string>
-    <string name="optional">Optional</string>
+    <string name="required">Požadované</string>
+    <string name="optional">Volitelný</string>
     <string name="permission_manage_media_title">• Manage Media</string>
     <string name="permission_manage_media_summary">"    • Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
     <string name="read_media_images">Read Media Images</string>
-    <string name="read_media_images_summary">Allows the app to show your images</string>
+    <string name="read_media_images_summary">Umožňuje aplikaci zobrazit vaše obrázky</string>
     <string name="read_media_videos">Read Media Videos</string>
     <string name="read_media_videos_summary">Allows the app to show your videos</string>
-    <string name="access_media_location">Access Media Location</string>
-    <string name="access_media_location_summary"><![CDATA[Allows the app to read location data of your images & videos]]></string>
+    <string name="access_media_location">Přístup k umístění médií</string>
+    <string name="access_media_location_summary"><![CDATA[Umožňuje aplikaci číst údaje o poloze vašich snímků & videí]]></string>
     <string name="internet">Internet</string>
     <string name="internet_summary"><![CDATA[Required to display Location Previews of your images & videos]]></string>
     <string name="fancy_blur">Fancy Blur</string>
     <string name="fancy_blur_summary">Blur background in Media View</string>
     <string name="old_navbar">Use Material Navigation</string>
     <string name="old_navbar_summary">Show the old navigation bar UI (with rails for bigger screens)</string>
-    <string name="hide_timeline_for_albums">Hide timeline for albums</string>
+    <string name="hide_timeline_for_albums">Skrýt časovou osu pro alba</string>
     <string name="hide_timeline_for_album_summary">Hides date headers when opening an album</string>
-    <string name="allow_vibrations">Allow vibrations</string>
+    <string name="allow_vibrations">Povolit vibrace</string>
     <string name="allow_vibrations_summary">Allow sending feedback as vibrations while performing some actions or gestures</string>
-    <string name="album_name">Album Name</string>
-    <string name="create_new_album">Create new album</string>
-    <string name="copy">Copy</string>
+    <string name="album_name">Název alba</string>
+    <string name="create_new_album">Vytvořit nové album</string>
+    <string name="copy">Kopírovat</string>
+    <string name="ignored_albums">Ignorovaná Alba</string>
+    <string name="select_an_album">Vybrat album</string>
+    <string name="blacklist_summary">Ignore albums from Gallery</string>
+    <string name="add_to_ignored">Přidat do ignorovaných albumů</string>
+    <string name="add_to_ignored_summary">Remove an album from showing inside the Gallery</string>
+    <string name="remove_from_ignored">Odebrat ze seznamu ignorovaných</string>
+    <string name="remove_from_ignored_summary">Remove from the ignored list the album named %1$s</string>
+    <string name="favorite">Favorite</string>
     <plurals name="item_count">
         <item quantity="one">%s položka</item>
         <item quantity="few">%s položky</item>
