--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -143,15 +143,23 @@
     <string name="internet_summary"><![CDATA[Nécessaire pour afficher les aperçus de la localisation de vos images et vidéos]]></string>
     <string name="fancy_blur">Flou artistique</string>
     <string name="fancy_blur_summary">Flouter l\'arrière-plan lors de la vue des médias</string>
-    <string name="old_navbar">Use Material Navigation</string>
-    <string name="old_navbar_summary">Show the old navigation bar UI (with rails for bigger screens)</string>
+    <string name="old_navbar">Utiliser la navigation Material</string>
+    <string name="old_navbar_summary">Afficher l\'ancienne barre de navigation (avec des rails pour les écrans plus grands)</string>
     <string name="hide_timeline_for_albums">Masquer la chronologie dans les albums</string>
     <string name="hide_timeline_for_album_summary">Masque les en-têtes de date lors de l\'ouverture d\'un album</string>
-    <string name="allow_vibrations">Allow vibrations</string>
-    <string name="allow_vibrations_summary">Allow sending feedback as vibrations while performing some actions or gestures</string>
-    <string name="album_name">Album Name</string>
-    <string name="create_new_album">Create new album</string>
-    <string name="copy">Copy</string>
+    <string name="allow_vibrations">Autoriser les vibrations</string>
+    <string name="allow_vibrations_summary">Permet d\'envoyer un retour sous forme de vibrations lors de l\'exécution de certaines actions ou de certains gestes</string>
+    <string name="album_name">Nom de l\'album</string>
+    <string name="create_new_album">Créer un nouvel album</string>
+    <string name="copy">Copier</string>
+    <string name="ignored_albums">Albums ignorés</string>
+    <string name="select_an_album">Sélectionner un album</string>
+    <string name="blacklist_summary">Ignorer des albums de la galerie</string>
+    <string name="add_to_ignored">Ajouter aux albums ignorés</string>
+    <string name="add_to_ignored_summary">Supprimer l\'affichage d\'un album dans la galerie</string>
+    <string name="remove_from_ignored">Supprimer de la liste d\'albums ignorés</string>
+    <string name="remove_from_ignored_summary">Retirer l\'album nommé %1$s des albums ignorés</string>
+    <string name="favorite">Favorite</string>
     <plurals name="item_count">
         <item quantity="one">%s élément</item>
         <item quantity="other">%s éléments</item>
