--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -50,8 +50,8 @@
     <string name="unpin">ピンを外す</string>
     <string name="pin">ピン留め</string>
     <string name="nav_timeline">タイムライン</string>
-    <string name="location_cd">Media Location</string>
-    <string name="location_map_cd">Location Map</string>
+    <string name="location_cd">メディアの位置情報</string>
+    <string name="location_map_cd">地図</string>
     <string name="app_dev">by %s</string>
     <string name="app_dev_name">IacobIonut01</string>
     <string name="donate">寄付</string>
@@ -103,9 +103,8 @@
     <string name="monthly_timeline_title">Monthly Timeline</string>
     <string name="monthly_timeline_summary">Group the timeline monthly instead of per date (Restarts the app)</string>
     <string name="amoled_mode_title">AMOLED モードを使用</string>
-    <string name="amoled_mode_summary">高コントラスト
-AMOLED スクリーンに最適です</string>
-    <string name="location_chip">場所: %s</string>
+    <string name="amoled_mode_summary">高コントラストで、AMOLED スクリーンに最適です</string>
+    <string name="location_chip">位置情報: %s</string>
     <string name="media_details">詳細</string>
     <string name="album_card_size">アルバムカードのサイズ</string>
     <string name="edit_metadata">メタデータを編集</string>
@@ -129,30 +128,38 @@ AMOLED スクリーンに最適です</string>
     <string name="some_permissions_are_not_granted">Some permissions are not granted!</string>
     <string name="get_started">始める</string>
     <string name="welcome">ようこそ</string>
-    <string name="setup_summary">In order to access your media, it is required to grant the following permissions:</string>
+    <string name="setup_summary">メディアにアクセスするには、以下の権限を付与する必要があります:</string>
     <string name="required">必須</string>
-    <string name="optional">オプション</string>
+    <string name="optional">任意</string>
     <string name="permission_manage_media_title">• メディアの管理</string>
     <string name="permission_manage_media_summary">"    • Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
-    <string name="read_media_images">Read Media Images</string>
-    <string name="read_media_images_summary">Allows the app to show your images</string>
-    <string name="read_media_videos">Read Media Videos</string>
-    <string name="read_media_videos_summary">Allows the app to show your videos</string>
-    <string name="access_media_location">Access Media Location</string>
-    <string name="access_media_location_summary"><![CDATA[Allows the app to read location data of your images & videos]]></string>
+    <string name="read_media_images">メディア画像の読み取り</string>
+    <string name="read_media_images_summary">アプリが画像を表示できるようにします</string>
+    <string name="read_media_videos">メディア動画の読み取り</string>
+    <string name="read_media_videos_summary">アプリが動画を表示できるようにします</string>
+    <string name="access_media_location">メディアの位置情報へのアクセス</string>
+    <string name="access_media_location_summary"><![CDATA[アプリが画像と動画の位置情報を読み取れるようにします]]></string>
     <string name="internet">インターネット</string>
-    <string name="internet_summary"><![CDATA[Required to display Location Previews of your images & videos]]></string>
+    <string name="internet_summary"><![CDATA[画像と動画の位置情報プレビューを表示するために必要です]]></string>
     <string name="fancy_blur">ファンシーブラー</string>
     <string name="fancy_blur_summary">メディアビューで背景をぼかします</string>
     <string name="old_navbar">マテリアルナビゲーションを使用</string>
-    <string name="old_navbar_summary">Show the old navigation bar UI (with rails for bigger screens)</string>
-    <string name="hide_timeline_for_albums">Hide timeline for albums</string>
-    <string name="hide_timeline_for_album_summary">Hides date headers when opening an album</string>
+    <string name="old_navbar_summary">古いナビゲーションバーの UI を表示する (大きい画面用にレールを使用)</string>
+    <string name="hide_timeline_for_albums">アルバムのタイムラインを非表示</string>
+    <string name="hide_timeline_for_album_summary">アルバムを開くときに、日付のヘッダーを非表示にします</string>
     <string name="allow_vibrations">バイブレーションを許可</string>
     <string name="allow_vibrations_summary">特定のアクションやジェスチャーを実行する際に、振動でフィードバックできるようにします</string>
     <string name="album_name">アルバム名</string>
     <string name="create_new_album">新しいアルバムを作成</string>
     <string name="copy">コピー</string>
+    <string name="ignored_albums">無視されたアルバム</string>
+    <string name="select_an_album">アルバムを選択</string>
+    <string name="blacklist_summary">Ignore albums from Gallery</string>
+    <string name="add_to_ignored">Add to ignored albums</string>
+    <string name="add_to_ignored_summary">Remove an album from showing inside the Gallery</string>
+    <string name="remove_from_ignored">Remove from ignored list</string>
+    <string name="remove_from_ignored_summary">Remove from the ignored list the album named %1$s</string>
+    <string name="favorite">Favorite</string>
     <plurals name="item_count">
         <item quantity="other">%s アイテム</item>
     </plurals>
