--- a/app/src/main/res/values-sr-rSP/strings.xml
+++ b/app/src/main/res/values-sr-rSP/strings.xml
@@ -152,6 +152,14 @@
     <string name="album_name">Album Name</string>
     <string name="create_new_album">Create new album</string>
     <string name="copy">Copy</string>
+    <string name="ignored_albums">Ignored Albums</string>
+    <string name="select_an_album">Select an album</string>
+    <string name="blacklist_summary">Ignore albums from Gallery</string>
+    <string name="add_to_ignored">Add to ignored albums</string>
+    <string name="add_to_ignored_summary">Remove an album from showing inside the Gallery</string>
+    <string name="remove_from_ignored">Remove from ignored list</string>
+    <string name="remove_from_ignored_summary">Remove from the ignored list the album named %1$s</string>
+    <string name="favorite">Favorite</string>
     <plurals name="item_count">
         <item quantity="one">%s предмет</item>
         <item quantity="few">%s предмета</item>
