--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,6 +181,7 @@
     <string name="custom_album_dialog_newalbum">Create a new Album!</string>
     <string name="custom_album_dialog_input_description">Please enter the title of your album</string>
     <string name="custom_album_dialog_input_title">Albumname</string>
+    <string name="customalbum_delete">Delete this album</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
