--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,6 +179,18 @@
     <string name="permission_manage_files_title">• Manage All Files</string>
     <string name="permission_manage_files_summary">"    • Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card"</string>
     <string name="allow_to_manage_files">Allow to Manage All Files</string>
+    <string name="vault">Vault</string>
+    <string name="tools">Tools</string>
+    <string name="library">Library</string>
+    <string name="biometric_authentication">Biometric Authentication</string>
+    <string name="unlock_your_vault">Unlock your Vault</string>
+    <string name="add_media_to_vault_cd">Add Media to Vault</string>
+    <string name="vault_exists">Vault %1$s (%2$s) exists</string>
+    <string name="granted">Granted</string>
+    <string name="new_vault">New Vault</string>
+    <string name="delete_vault">Delete Vault</string>
+    <string name="unknown_vault">Unknown Vault</string>
+    <string name="hide">Hide</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
