--- a/app/src/main/res/values-sr-rSP/strings.xml
+++ b/app/src/main/res/values-sr-rSP/strings.xml
@@ -131,8 +131,8 @@
     <string name="setup_summary">Да бисмо приступили вашим медијима, потребно је да дате следеће дозволе:</string>
     <string name="required">Неопходно</string>
     <string name="optional">Опционално</string>
-    <string name="permission_manage_media_title">• Управљање медијима</string>
-    <string name="permission_manage_media_summary">"    • Аутоматски даје системске дијалоге за потврду, када затражите неколико промена на вашем медију (укључивање омиљених, управљање смећем, измена метаподатака итд.)"</string>
+    <string name="permission_manage_media_title">Управљање медијима</string>
+    <string name="permission_manage_media_summary">"Аутоматски даје системске дијалоге за потврду, када затражите неколико промена на вашем медију (укључивање омиљених, управљање смећем, измена метаподатака итд.)"</string>
     <string name="read_media_images">Читање слика медија</string>
     <string name="read_media_images_summary">Дозвољава апликацији да приказује ваше слике</string>
     <string name="read_media_videos">Читање видео снимака медија</string>
