--- a/app/src/main/res/values-nn-rNO/strings.xml
+++ b/app/src/main/res/values-nn-rNO/strings.xml
@@ -132,7 +132,7 @@
     <string name="required">Påkravd</string>
     <string name="optional">Valfritt</string>
     <string name="permission_manage_media_title">• Handsame medium</string>
-    <string name="permission_manage_media_summary">"    • Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
+    <string name="permission_manage_media_summary">"Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
     <string name="read_media_images">Lesetilgang til bilete</string>
     <string name="read_media_images_summary">Tillèt appen å vise deg bileta dine</string>
     <string name="read_media_videos">Lesetilgang til videoar</string>
@@ -176,8 +176,8 @@
     <string name="auto">Auto</string>
     <string name="change_playback_speed_cd">Change playback speed</string>
     <string name="location_new_album">Location: Internal-Storage/%1$s</string>
-    <string name="permission_manage_files_title">• Manage All Files</string>
-    <string name="permission_manage_files_summary">"    • Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card"</string>
+    <string name="permission_manage_files_title">Manage All Files</string>
+    <string name="permission_manage_files_summary">"Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card"</string>
     <string name="allow_to_manage_files">Allow to Manage All Files</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
