--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -176,8 +176,8 @@
     <string name="auto">Auto</string>
     <string name="change_playback_speed_cd">Ändere Wiedergabegeschwindigkeit</string>
     <string name="location_new_album">Standort: interner Speicher/%1$s</string>
-    <string name="permission_manage_files_title">• Verwalte alle Dateien</string>
-    <string name="permission_manage_files_summary">"    • Erlaubt der App Dateien zu erstellen, bearbeiten und zu löschen welche zuvor vom System eingeschränkt waren. (Beinhaltet Alben außerhalb der Bilder und DCIM Ordner und die auf der SD-Karte)"</string>
+    <string name="permission_manage_files_title">Verwalte alle Dateien</string>
+    <string name="permission_manage_files_summary">"Erlaubt der App Dateien zu erstellen, bearbeiten und zu löschen welche zuvor vom System eingeschränkt waren. (Beinhaltet Alben außerhalb der Bilder und DCIM Ordner und die auf der SD-Karte)"</string>
     <string name="allow_to_manage_files">Verwalten aller Dateien zulassen</string>
     <plurals name="item_count">
         <item quantity="one">%s Datei</item>
