--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -131,7 +131,7 @@
     <string name="setup_summary">Для доступа к вашим медиафайлам необходимо предоставить следующие разрешения:</string>
     <string name="required">Необходимое</string>
     <string name="optional">Необязательное</string>
-    <string name="permission_manage_media_title">- Управление медиа</string>
+    <string name="permission_manage_media_title">Управление медиа</string>
     <string name="permission_manage_media_summary">"Автоматически выдает системные диалоги подтверждения, когда вы запрашиваете несколько изменений в медиафайлах (переключение избранного, управление корзиной, редактирование метаданных и т. д.)"</string>
     <string name="read_media_images">Чтение изображений</string>
     <string name="read_media_images_summary">Позволяет приложению отображать ваши изображения</string>
@@ -176,8 +176,8 @@
     <string name="auto">Авто</string>
     <string name="change_playback_speed_cd">Изменение скорости воспроизведения</string>
     <string name="location_new_album">Location: Internal-Storage/%1$s</string>
-    <string name="permission_manage_files_title">• Manage All Files</string>
-    <string name="permission_manage_files_summary">"    • Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card"</string>
+    <string name="permission_manage_files_title">Manage All Files</string>
+    <string name="permission_manage_files_summary">"Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card"</string>
     <string name="allow_to_manage_files">Allow to Manage All Files</string>
     <plurals name="item_count">
         <item quantity="one">%s пункт</item>
